[package]
name = "denodio"
crate-type = ["cdylib"]
version = "0.0.3"

[lib]
name = "denodio"
path = "src/lib.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17.1"
deno_bindgen = "0.8.1"
serde = { version = "1", features = ["derive"] }
